<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/ht"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/ic_weight"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/edtWeight"
            android:hint="@string/hint_wt"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="189dp"
        android:layout_toRightOf="@+id/ht"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginLeft="10dp"
        app:startIconDrawable="@drawable/ic_height"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/edtHeight"
            android:hint="@string/hint_ht"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"

            android:id="@+id/btnCal"
            android:layout_below="@+id/ht"
            android:text="@string/txt_btnCal"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
            app:cornerRadius="50dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            >



        </com.google.android.material.button.MaterialButton>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/txt_result"
        android:id="@+id/txtResult"
        android:textSize="20sp"
        android:textColor="@color/purple_700"
        android:layout_marginTop="170dp"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
        android:backgroundTint="@color/material_on_surface_stroke"
        android:textStyle="bold"
        android:textAllCaps="true"
        >



    </com.google.android.material.button.MaterialButton>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/txt_Msg"
        android:textColor="@color/purple_700"

        android:id="@+id/txtMsg"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
        android:layout_marginTop="225dp"
        android:textSize="20dp"
        android:backgroundTint="@color/material_on_surface_stroke"

        android:textStyle="bold"
        android:textAllCaps="true"
        >



    </com.google.android.material.button.MaterialButton>
</RelativeLayout>